--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
-  "name": "bitcoinfetcherjs",
+  "name": "bitcoinfetcher",
   "version": "1.0.0",
   "description": "Buscar BTC e USD por minuto",
   "author": "G Soft Creations",
-  "main": "index.js",
+  "type": "module",
   "scripts": {
+    "start": "tsx src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "dependencies": {
     "axios": "^1.13.4",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "tsx": "^4.21.0"
+  },
+  "devDependencies": {
+    "@types/node": "^25.0.10"
   }
 }
