--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "keywords": [],
   "dependencies": {
     "axios": "^1.13.4",
-    "sqlite3": "^5.1.7",
+    "better-sqlite3": "^12.6.2",
     "tsx": "^4.21.0"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^25.0.10"
   }
 }
