--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
   "type": "module",
   "scripts": {
     "start": "tsx src/index.ts",
+    "lint": "eslint 'src/**/*.ts'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "dependencies": {
     "axios": "^1.13.4",
-    "better-sqlite3": "^12.6.2",
+    "firebase-admin": "^13.6.1",
     "tsx": "^4.21.0"
   },
   "devDependencies": {
-    "@types/better-sqlite3": "^7.6.13",
-    "@types/node": "^25.0.10"
+    "@types/node": "^25.0.10",
+    "eslint": "^10.0.0",
+    "typescript-eslint": "^8.56.0"
   }
 }
